--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,134 +1,74 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:orientation="vertical"
+    android:gravity="center"
+    android:padding="16dp"
     tools:context=".MainActivity">
 
-    <TextView
-        android:id="@+id/tvResultLabel"
-        android:layout_width="74dp"
-        android:layout_height="30dp"
-        android:layout_marginStart="12dp"
-        android:layout_marginTop="28dp"
-        android:text="Result"
-        android:textSize="24sp"
-        android:textStyle="bold"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/btnLocal" />
+    <!-- Dropdown to select operation -->
+    <Spinner
+        android:id="@+id/spinnerOperation"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:entries="@array/operations_array" />
 
+    <!-- Pi operation buttons -->
+    <LinearLayout
+        android:id="@+id/layoutPi"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        android:gravity="center"
+        android:layout_marginTop="16dp">
+
+        <Button
+            android:id="@+id/btnPiOption1"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Pi Option 1" />
+
+        <Button
+            android:id="@+id/btnPiOption2"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Pi Option 2"
+            android:layout_marginStart="16dp" />
+    </LinearLayout>
+
+    <!-- Prime operation buttons -->
+    <LinearLayout
+        android:id="@+id/layoutPrime"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        android:gravity="center"
+        android:layout_marginTop="16dp"
+        android:visibility="gone">
+
+        <Button
+            android:id="@+id/btnPrimeOption1"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Prime Option 1" />
+
+        <Button
+            android:id="@+id/btnPrimeOption2"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Prime Option 2"
+            android:layout_marginStart="16dp" />
+    </LinearLayout>
+
+    <!-- Result display -->
     <TextView
         android:id="@+id/tvResult"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="12dp"
         android:layout_marginTop="24dp"
-        android:text="No results yet"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/tvResultLabel"
-        app:layout_constraintVertical_bias="0.0" />
+        android:text="Result will appear here"
+        android:textSize="16sp" />
 
-    <TextView
-        android:id="@+id/seedLabel"
-        android:layout_width="154dp"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="40dp"
-        android:text="Seed: "
-        android:textSize="24sp"
-        app:layout_constraintEnd_toStartOf="@+id/tbSeed"
-        app:layout_constraintHorizontal_bias="0.5"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/tvIterationsLabel" />
-
-    <TextView
-        android:id="@+id/tvServerIP"
-        android:layout_width="154dp"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="28dp"
-        android:text="Server IP:"
-        android:textSize="24sp"
-        app:layout_constraintEnd_toStartOf="@+id/tbServerIP"
-        app:layout_constraintHorizontal_bias="0.5"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
-
-    <EditText
-        android:id="@+id/tbServerIP"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="16dp"
-        android:ems="10"
-        android:inputType="text"
-        android:minHeight="48dp"
-        android:text="http://10.0.2.2:8080"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.5"
-        app:layout_constraintStart_toEndOf="@+id/tvServerIP"
-        app:layout_constraintTop_toTopOf="parent" />
-
-    <TextView
-        android:id="@+id/tvIterationsLabel"
-        android:layout_width="154dp"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="52dp"
-        android:text="Iterations: "
-        android:textSize="24sp"
-        app:layout_constraintEnd_toStartOf="@+id/tbIterations"
-        app:layout_constraintHorizontal_bias="0.5"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/tvServerIP" />
-
-    <EditText
-        android:id="@+id/tbIterations"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="36dp"
-        android:ems="10"
-        android:hint="10000"
-        android:inputType="number"
-        android:minHeight="48dp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.5"
-        app:layout_constraintStart_toEndOf="@+id/tvIterationsLabel"
-        app:layout_constraintTop_toBottomOf="@+id/tbServerIP" />
-
-    <EditText
-        android:id="@+id/tbSeed"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="28dp"
-        android:ems="10"
-        android:hint="1234"
-        android:inputType="number"
-        android:minHeight="48dp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.5"
-        app:layout_constraintStart_toEndOf="@+id/seedLabel"
-        app:layout_constraintTop_toBottomOf="@+id/tbIterations" />
-
-    <Button
-        android:id="@+id/btnLocal"
-        android:layout_width="190dp"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="36dp"
-        android:text="Execute locally"
-        app:layout_constraintEnd_toStartOf="@+id/btnRemote"
-        app:layout_constraintHorizontal_bias="0.5"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/seedLabel" />
-
-    <Button
-        android:id="@+id/btnRemote"
-        android:layout_width="182dp"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="28dp"
-        android:text="Execute remote"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.5"
-        app:layout_constraintStart_toEndOf="@+id/btnLocal"
-        app:layout_constraintTop_toBottomOf="@+id/tbSeed" />
-
-</androidx.constraintlayout.widget.ConstraintLayout>
+</LinearLayout>
